Fixed index.html having the wrong background image

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html{
 
 .dnd{
     background-color:#F1EEE9;
-    background-image: url("img/pf-2e-sheet.jpg");
+    background-image: url("img/dnd-5e-sheet.jpg");
     background-size:100%;
     background-repeat:no-repeat;
 }
